--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "*",
-    "xml2js": "^0.4.23"
+    "mongodb": "^3.6.2",
+    "xml2js": "^0.4.23",
+    "apollo-datasource": "^0.1.3",
+    "apollo-datasource-rest": "^0.1.5",
+    "dotenv": "^6.2.0",
+    "apollo-server": "^2.15.0",
+    "apollo-server-testing": "^2.15.0",
+    "graphql": "^14.6.0"
   }
 }
