--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,8 @@
 {
-  "production": {
-    "database": "",
-    "worker_number": 10,
-    "tmp_file": "./tmp/tmp.xml"
-  }
+  "database_url": "mongodb://localhost:27017/",
+  "database_name": "vehicles",
+  "worker_number": 10,
+  "tmp_file": "./tmp/tmp.xml",
+  "full_list_url": "",
+  "type_list_url": "https://vpic.nhtsa.dot.gov/api/vehicles/GetVehicleTypesForMakeId"
 }
