--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "express"
   ],
   "dependencies": {
-    "axios": "^0.21.0",
-    "express": "*",
-    "mongodb": "^3.6.2",
-    "xml2js": "^0.4.23",
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
-    "dotenv": "^6.2.0",
     "apollo-server": "^2.15.0",
     "apollo-server-testing": "^2.15.0",
-    "graphql": "^14.6.0"
+    "axios": "^0.21.0",
+    "dotenv": "^6.2.0",
+    "express": "*",
+    "graphql": "^14.6.0",
+    "mongodb": "^3.6.2",
+    "request": "^2.88.2",
+    "xml2js": "^0.4.23"
   }
 }
