--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "*",
     "graphql": "^14.6.0",
     "mongodb": "^3.6.2",
+    "node-schedule": "^1.3.2",
     "xml2js": "^0.4.23"
   }
 }
